<resources>
    <string name="app_name">SprintAPP</string>
    <string name="day_is_not_available">Dzień niedostępny</string>
    <string name="diagnostics">Diagnostyka</string>
    <string name="annual_inspection">Przegląd</string>
    <string name="oil_change">Zmiana oleju</string>
    <string name="day_is_available">Dzień dostępny</string>
    <string name="something_went_wrong">Something went wrong ;(</string>
    <string name="select_day">Select day for details</string>
    <string name="calendar">Calendar</string>
    <string name="today">Today</string>
    <string name="my_visits">My visits</string>
    <string name="select_day_to_register">Select day to register</string>
    <string name="manage">Manage</string>
    <string name="my_cars">My cars</string>
    <string name="prod_year">Prod. year</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="fuel_type">Fuel type</string>
    <string name="vin_number">VIN number</string>
    <string name="registration_number">Registration number</string>
    <string name="insurance_policy">Insurance policy</string>
    <string name="save">SAVE</string>
    <string name="add_car">Add car</string>
    <string name="main_title">Main Title</string>
    <string name="phone_number">Phone number</string>
    <string name="maintenance">Maintenance</string>
    <string name="enter_name">Enter name</string>
    <string name="service_type">Service Type</string>
    <string name="additional_informations">Additional informations</string>
    <string name="car_model">Car model</string>
    <string name="register">REGISTER</string>
    <string name="brand_and_model">brand and model</string>
    <string name="no_phone_permission">Brak uprawnień aplikacji do dzwonienia.</string>
    <string name="set_days_availability">Set days availability</string>
    <string name="set_closed">SET CLOSED</string>
    <string name="set_open">SET OPEN</string>
    <string name="pick_a_day_to_set_its_availability">Pick a day to set its availability</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="save_all_changes">SAVE ALL CHANGES</string>

    <string-array name="event_types">
        <item>Annual Inspection</item>
        <item>Oil Change</item>
        <item>Diagnostics</item>
    </string-array>

    <string-array name="">

    </string-array>

</resources>


