<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/calendar_client"
        android:enabled="true"
        android:checked="true"
        android:icon="@drawable/baseline_calendar_today_white_48dp"
        android:title="@string/calendar"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/my_cars"
        android:enabled="true"
        android:icon="@drawable/baseline_directions_car_white_48dp"
        android:title="@string/my_cars"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/my_visits"
        android:enabled="true"
        android:icon="@drawable/baseline_book_white_48dp"
        android:title="@string/my_visits"
        app:showAsAction="withText"
        />

</menu>