<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/call_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@mipmap/call_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/main_title"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clientPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/phone_number"
                android:textColor="#2C2C2C"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/maintenance"
                android:textColor="#2C2C2C"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#a9a9a9a9" />

</LinearLayout>