<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/car_placeholder"
            android:layout_width="142dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/car_placeholder_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/model"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/carBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/brand"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/carRegistrationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/registration_number"
                android:textColor="#414141"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/edit_car"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/baseline_edit_white_24dp" />

            <ImageButton
                android:id="@+id/delete_car_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/baseline_delete_white_24dp" />


        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#a9a9a9a9" />


</LinearLayout>